# mu-mcp

./: .gitignore  README.md  mu-mcp.py  pyproject.toml
.github/: copilot-instructions.md
mu_mcp/: __main__.py  mu-extract.txt  mu-find.txt  mu-query.txt  mu_mcp.py
