[project]
name = "mu_mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for mail-utils (mu) email indexing and search tool."
authors = [{ name = "Daniel Fleischer" }]
requires-python = ">=3.10"
dependencies = ["mcp[cli]", "mcp-server"]
license = { file = "LICENSE" }

[tool.setuptools]
py-modules = ["mu-mcp"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
